--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'menu';
 
 * {
     box-sizing: border-box;
@@ -12,6 +13,7 @@ body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5;
+  overflow: none;
 }
 
 // Headings
