--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,9 @@
-@import 'config';
-@import 'menu';
+@import "config";
+@import "menu";
+@import "mobile";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -17,62 +18,59 @@ body {
 }
 
 // Headings
-h1, 
+h1,
 h2,
 h3 {
-    margin: 0;
-    font-weight: 400;
+  margin: 0;
+  font-weight: 400;
 
-    &.lg-heading {
-        font-size: 6rem;
+  &.lg-heading {
+    font-size: 6rem;
+  }
 
-    }
-
-    &.small-heading {
-        margin-bottom: 2rem;
-        padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5); 
-
-    }
-
+  &.small-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
 }
 
 a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 header {
-    position: fixed;
-    z-index: 2;
-    width: 100%;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
 }
 
-.text-secondary{
-    color: $secondary-color;
+.text-secondary {
+  color: $secondary-color;
 }
 
 main {
-    padding: 4rem;
-    height: 100%;
+  padding: 4rem;
+  height: 100%;
 
-    .icons {
-        margin-top: 1rem;
+  .icons {
+    margin-top: 1rem;
 
-        a {
-            padding: 0.4rem;
+    a {
+      padding: 0.4rem;
 
-            &:hover {
-                color: $secondary-color;
-                @include easeOut();
-            }
-        }
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
     }
+  }
 
-    &#home {
-        overflow: hidden;
-        h1 {
-            margin-top: 20vh;
-        }
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
     }
+  }
 }
