--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,6 +46,23 @@
         height: 150px !important;
     }
 
+    h2 {
+    &.small-heading {
+    width: 100%  !important;  
+    }
+}
+
+.about-info {
+    grid-template-areas: 
+    'bioimage'
+    'bio'
+    'job1'
+    'job2'
+    'job3';
+
+    grid-template-columns: 1fr;
+}
+
 }
 // Smartphones
 @include mediaSm {
