--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: turquoise;
 $show-home-image: true;
-$home-image: url(../img/background.jpeg);
+$home-image: url(../dist/img/background.jpeg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
