--- a/scss/main.scss
+++ b/scss/main.scss
@@ -199,4 +199,120 @@ main {
     height: 4rem;
 }
 
+// Google Maps 
+iframe {
+  border-radius: 3%;
+  opacity: 0.5;
+  z-index: -1;
+}
+.contact-form{
+  width: 100%;
+  height:300px;
+  position:relative;
+}
+ 
+    
+    
+    input[type=text]{  
+    border-bottom: 2px white solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    position: relative;
+    width: 75%;
+    margin:0;
+    display: block;
+    margin-top: 10px;
+    color:#fff;
+    padding: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1em;
+    background-color: $primary-color;
+    }
+    input[type=email]{
+        border-bottom: 2px white solid;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        position: relative;
+        width: 75%;
+        margin:0;
+        display: block;
+        margin-top: 10px;
+        color: #fff;
+        padding: 5px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 1em;
+        width: 75%;
+        background-color: $primary-color;
+        }
+
+        textarea{
+          margin: 0;
+          border-bottom: 2px white solid;
+          border-top: none;
+          border-left: none;
+          border-right: none;
+          display: block;
+          margin-top: 10px;
+          color: #fff;
+          padding: 5px;
+          height: 5rem;
+          width: 75%;
+          resize: none;
+          background-color: $primary-color;
+          font-family: Verdana, Geneva, Tahoma, sans-serif;
+          font-size: 1em;
+          }    
+ 
+    button{
+    border: 3px white solid;
+    border-radius: 10px;
+    position: left;
+    text-align: center;
+    margin:0;
+    display: block;
+    margin-top: 10px;
+    color: white;
+    padding: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(192,192,192);
+    margin-top: 20px;
+    background:none;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+    
+    }
+    
+    button:hover{
+    background: $secondary-color;
+    transition: all .3s ease-in-out;
+    transform: scale(1.1);
+    
+    }
+    
+    input[type="text"]:focus, input[type="email"]:focus{
+    background-color: $primary-color;
+    }
+    
+    input:-webkit-autofill,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+    -webkit-text-fill-color: #fff !important;
+    -webkit-box-shadow: 0 0 0px 1000px $primary-color inset;
+    }
+
+.contact-form-and-map {
+  display: grid;
+  grid-gap: 1.1rem;
+  grid-template-areas: 
+  'form map';
+  grid-template-columns: repeat(2, 1fr);
+}
+.map-image {
+  border-radius: 5px;
+  width: 100%;
+}
+
+    
 @import "mobile";
