--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -46,6 +46,12 @@ $background-opacity: 0.9;
   }
 }
 
+@mixin mediaSmLand {
+  @media screen and (max-width: 667px) and (max-height: 375px) {
+    @content;
+  }
+}
+
 @mixin mediaMd {
   @media screen and (max-width: 768px) {
     @content;
